feat: 시즌 3 직업 증강과 베타 개선 반영
직업 전용 증강, 지정 도구와 개인 발광, 전투·성장·경제 효과 및 회귀 검사를 연결한다. 웨이브 편성, 증강 선택 안내, 예비 보상 상향과 미래 등급 비공개를 포함한다.

검증: Java 21 test runGameTest remapJar 전체 게이트 성공. 단위 테스트 1312건 통과, 기존 비활성 2건 제외. GameTest 668건 통과. 운영 배포와 공개 설정 적용 없음.